apps/20-media/radarr/overlays/dev/http-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: radarr-http-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
