apps/20-media/radarr/overlays/dev/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  template:
    spec:
      volumes:
        - name: config-patcher
          configMap:
            name: radarr-config-patcher
