apps/20-media/radarr/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/icon: "radarr.png"
    gethomepage.dev/group: "Media"
    traefik.ingress.kubernetes.io/router.middlewares: media-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: radarr.dev.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.dev.truxonline.com
      secretName: radarr-tls
